# webgenr

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  book.epub  index.md
.github/workflows/: action-deploy.yml  action-test.yml  github_actions.yml
examples/: README.md
examples/ampersand/: README.md
examples/ampersand/source/: credits.md
examples/book-html/: README.md  build.sh
examples/book-md/: README.md  build.sh
examples/book-md/book-template/: default.hbs
examples/book-md/source/: _title.md  ch1.md  ch2.md
examples/book-media/: README.md
examples/book-media/book-template/: default.hbs
examples/book-media/source/: _title.md  ch1.md  ch2.md  credits.md
examples/nested-files/: README.md  build.sh
examples/nested-files/markdown/: index.md
examples/nested-files/markdown/notes/: one.md  two.md
gh-pages/: build.sh
gh-pages/source/: index.md
markdown/: index.md
markdown/notes/: one.md
src/: document.rs  lib.rs  main.rs  util.rs  web.rs
src/util/: cowstr.rs  dir_entry.rs  mod.rs  path.rs
templates/: default.hbs  index.html
