[package]
name = "webgenr"
version = "0.1.0"
edition = "2021"
authors = ["Sarah Allen"]
description = "generate static site from markdown, media files and metadata"

[dependencies]
pulldown-cmark = "0.9.1"
clap = {version = "3.1.7", features = ["derive"]}
log = "0.4.16"
pretty_env_logger = "0.4.0"
walkdir = "2.3.2"
