[package]
name = "webgenr"
version = "0.1.9" 
edition = "2021"
authors = ["Sarah Allen", "Elliot Winard"]
description = "generate static site from markdown, media files and metadata"

[dependencies]
pulldown-cmark = "0.9.1"
clap = {version = "3.1.7", features = ["derive"]}
log = "0.4.16"
pretty_env_logger = "0.4.0"
walkdir = "2.3.2"
handlebars = {version = "4.2.2", features = ["dir_source"]}
anyhow = "1.0.56"
serde_json = "1.0.79"
serde = "1.0.136"
rust-embed = {version = "6.4.2", features = ["include-exclude"]}
serde_yaml = "0.9.14"
epub-builder = { git = "https://github.com/ultrasaurus/epub-builder", branch="ultra-main" }
